<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/my_apps_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        android:id="@+id/textView" />

    <Button
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:text="@string/spotify_streamer"
        android:id="@+id/spotify_button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#3F51B5"
        android:textColor="#FFF" />

    <Button
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:text="@string/scores_app"
        android:id="@+id/scores_button"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/spotify_button"
        android:layout_centerHorizontal="true"
        android:background="#3F51B5"
        android:textColor="#FFF"/>

    <Button
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:text="@string/library_app"
        android:id="@+id/library_button"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/scores_button"
        android:layout_centerHorizontal="true"
        android:background="#3F51B5"
        android:textColor="#FFF"/>

    <Button
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:text="@string/build_it_bigger"
        android:id="@+id/build_it_button"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/library_button"
        android:layout_centerHorizontal="true"
        android:background="#3F51B5"
        android:textColor="#FFF"/>

    <Button
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:text="@string/xyz_reader"
        android:id="@+id/xyz_button"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/build_it_button"
        android:layout_centerHorizontal="true"
        android:background="#3F51B5"
        android:textColor="#FFF"/>

    <Button
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:text="@string/capstone_app"
        android:id="@+id/capstone_button"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/xyz_button"
        android:layout_centerHorizontal="true"
        android:background="#FF1744"
        android:textColor="#FFF"/>

</RelativeLayout>
